--- a/app/Monitor/mainwindow.ui
+++ b/app/Monitor/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1066</width>
-    <height>654</height>
+    <height>664</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,18 +19,22 @@
      <rect>
       <x>40</x>
       <y>29</y>
-      <width>631</width>
+      <width>711</width>
       <height>561</height>
      </rect>
     </property>
-    <layout class="QHBoxLayout" name="horizontalLayout"/>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QCameraViewfinder" name="viewfinder" native="true"/>
+     </item>
+    </layout>
    </widget>
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>699</x>
+      <x>769</x>
       <y>29</y>
-      <width>331</width>
+      <width>261</width>
       <height>561</height>
      </rect>
     </property>
@@ -58,6 +62,14 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QCameraViewfinder</class>
+   <extends>QWidget</extends>
+   <header>qcameraviewfinder.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
