--- a/app/tests/auto/tests/mainwindow.ui
+++ b/app/tests/auto/tests/mainwindow.ui
@@ -119,6 +119,9 @@
       </widget>
      </widget>
     </item>
+    <item row="0" column="1">
+     <layout class="QVBoxLayout" name="verticalLayout"/>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -194,22 +197,6 @@
     <hint type="destinationlabel">
      <x>154</x>
      <y>130</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>actionSettings</sender>
-   <signal>triggered()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>configureCaptureSettings()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>333</x>
-     <y>210</y>
     </hint>
    </hints>
   </connection>
